# darkside-calendar-sync

./: .gitignore  README.md  pyproject.toml
src/: main.py  utils.py
src/calsyncs/: caldav.py  calsync.py
src/scrapers/: darkside_api.py  scraper.py
